[package]
name = "cpuprofiler"
version = "0.0.3"
authors = ["james <LucasJ94@hotmail.co.uk>"]

description = "Bindings to google's cpu profiler"
repository = "https://github.com/AtheMathmo/cpuprofiler"
keywords = ["cpu", "profiler", "cpuprofiler"]
readme = "README.md"
license = "BSD-2-Clause"

[dependencies]
lazy_static = "1.0"
error-chain = "0.12"
